# kokkos-clang

./: .gitignore  CMakeLists.txt  LICENSE  README
cuda/: CMakeLists.txt  reduce.cu
cuda/device/: main.cu
cuda/device-link/: Makefile  func.cu  main.cu
cuda/mcub/: util_device.cuh
cuda/mcub/agent/: agent_reduce.cuh
cuda/mcub/block/: block_reduce.cuh
cuda/mcub/device/: device_reduce.cuh
cuda/mcub/thread/: thread_reduce.cuh
cuda/test/: Makefile  test.cu
llvm-3.9.1/: .gitignore
llvm/lib/IR/: Verifier.cpp
runtime/: CMakeLists.txt  runtime.cpp
runtime/mcub/agent/: agent_reduce.cuh
runtime/mcub/device/: device_reduce.cuh
runtime/mcub/device/dispatch/: dispatch_reduce.cuh
test/benchmark/sc15a/: blessed.in  test.cpp
test/benchmark/sc15a.k/: blessed.in
test/benchmark/stencil.16/: Makefile  blessed.in  test.cpp
test/benchmark/stencil.4/: Makefile  blessed.in  test.cpp
test/benchmark/stencil.64/: Makefile  blessed.in  test.cpp
test/benchmark/stencil.k.16/: blessed.in  test.cpp
test/benchmark/stencil.k.4/: blessed.in  test.cpp
test/benchmark/stencil.k.64/: Makefile  blessed.in  test.cpp
test/kokkos-view-layout/: Makefile  test.cpp
test/reduce/: Makefile  test.cpp
test/reduce2/: test.cpp
test/reduce2.k/: Makefile
test/regress/: Makefile
test/sc15a/: Makefile  test.cpp
test/sc15a.k/: KokkosCore_config.h  KokkosCore_config.tmp  test.cpp  test.cuda
test/stencil9/: test.cpp
test/test1/: Makefile  test.cpp
test/test2/: test.cpp
test/test3/: test.cpp
test/test4/: Makefile.i  test.cpp
test/test7/: test.cpp
(+60 files in other folders)
